--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 	
 	
 	<h1>About Me</h1>
+	
+	<h1>My Major</h1>
+	<p>My major is communication with a minor in buisness and religious studies.</p>
 </body>
 </html>
