--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
 	
 	<h1>My Major</h1>
 	<p>My major is communication with a minor in buisness and religious studies.</p>
+	
+	<h1>My Github</h1>
+	<a href="https://github.com/maggiechustckie">Github</a>
+		
 </body>
 </html>
